--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ exceptiongroup==1.1.2
 iniconfig==2.0.0
 packaging==23.1
 pluggy==1.2.0
+psycopg2==2.9.7
 pytest==7.4.0
 pytest-mock==3.11.1
 pytz==2023.3
 sqlparse==0.4.4
 tomli==2.0.1
-typing-extensions==4.7.1
+typing_extensions==4.7.1
