--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 Django==4.2.4
+django-extensions==3.2.3
+django-shell-plus==1.1.7
 djangorestframework==3.14.0
 exceptiongroup==1.1.2
 iniconfig==2.0.0
