--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - 8000:8000
     command:
-      python manage.py runserver 0.0.0.0:8000
+      bash
     tty: true
     depends_on:
       - db
