--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-python_files = tests*.py
+python_files = tests*.py *tests.py tests/*
 python_functions = test*
 norecursedirs = old_code
 addopts = --capture=no
