--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -18,4 +18,4 @@ jobs:
         uses: py-actions/flake8@v1
         with:
           max-line-length: '120'
-          exclude: 'old_code'
+          exclude: 'old_code,*/migrations'
