--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -30,9 +30,7 @@ jobs:
         with:
           python-version: '3.10'
           architecture: x64
+      - name: install packages
+        run: pip install model-bakery pytest pytest-django pytest-mock
       - name: test
-        uses: pavelzw/pytest-action@v2
-        with:
-          verbose: true
-          emoji: true
-          job-summary: true
+        run: pytest
