Ignore settings in lint

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
         uses: py-actions/flake8@v1
         with:
           max-line-length: '120'
-          exclude: 'old_code,*/migrations'
+          exclude: 'old_code,*/migrations,**/*settings.py'
   test:
     runs-on: ubuntu-20.04
     name: test
