--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 asgiref==3.7.2
+autopep8==2.0.4
 Django==4.2.4
 django-extensions==3.2.3
 django-shell-plus==1.1.7
+django-silk==5.0.4
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 exceptiongroup==1.1.2
+gprof2dot==2022.7.29
 iniconfig==2.0.0
 model-bakery==1.15.0
 packaging==23.1
 pluggy==1.2.0
 psycopg2==2.9.7
+pycodestyle==2.11.1
+PyJWT==2.8.0
 pytest==7.4.0
 pytest-django==4.5.2
 pytest-mock==3.11.1
@@ -16,4 +22,3 @@ pytz==2023.3
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.7.1
-djangorestframework-simplejwt==5.2.2
