--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,27 @@ services:
     tty: true
     depends_on:
       - db
+      - redis
     environment:
       DJANGO_SETTINGS_MODULE: config.settings
+      CELERY_BROKER: redis://redis:6379/0
+      CELERY_BACKEND: redis://redis:6379/0
+
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A config worker -l INFO
+    volumes:
+      - .:/app
+    depends_on:
+      - app
+      - redis
+
+  redis:
+    image: "redis:alpine"
 
 volumes:
   db-data:
+
+
